@@ -1,0 +1,1 @@
+usr/share/apport/ubiquity.py usr/share/apport/ubiquity-frontend-gtk.py
