@@ -1,6 +1,8 @@
 ubiquity (1.3.14) UNRELEASED; urgency=low
 
   * Use partman-efi on i386.
+  * Ship an apport hook instead of calling apport directly from the GTK
+    frontend.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Sun, 21 Jan 2007 16:01:12 +0000
 
